--- a/Week4/Assignment/simple_vehicle_sim/CMakeLists.txt
+++ b/Week4/Assignment/simple_vehicle_sim/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(eurecarr_vehicle_sim)
+project(simple_vehicle_sim)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
@@ -109,7 +109,7 @@ catkin_python_setup()
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
   INCLUDE_DIRS include
-  LIBRARIES eurecarr_vehicle_sim
+  LIBRARIES simple_vehicle_sim
   CATKIN_DEPENDS geometry_msgs nav_msgs roscpp rospy std_msgs
   #DEPENDS system_lib
 )
@@ -127,7 +127,7 @@ include_directories(
 
 ## Declare a C++ library
 # add_library(${PROJECT_NAME}
-#   src/${PROJECT_NAME}/eurecarr_vehicle_sim.cpp
+#   src/${PROJECT_NAME}/simple_vehicle_sim.cpp
 # )
 
 ## Add cmake target dependencies of the library
@@ -138,7 +138,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/eurecarr_vehicle_sim_node.cpp)
+# add_executable(${PROJECT_NAME}_node src/simple_vehicle_sim_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -207,7 +207,7 @@ install(DIRECTORY launch/
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_eurecarr_vehicle_sim.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_simple_vehicle_sim.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
